--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,5 +1,5 @@
 * {
-   user-select: none !important;
+   user-select: none;
  }
  
  html {
@@ -196,7 +196,7 @@
    align-content: center;
    align-items: center;
    justify-content: center;
-   background-color: #ff9800 !important;
+   background-color: #ff9800;
  }
  
  .modal-avatar {
@@ -221,15 +221,15 @@
    height: 50px;
    border-radius: 12px;
    text-align: center;
-   background-color: rgba(0, 0, 0, 0.30) !important;
-   color: rgb(255, 255, 255) !important;
+   background-color: rgba(0, 0, 0, 0.30);
+   color: rgb(255, 255, 255);
    transition: 0.5s;
  }
  
  .modal-avatar-text:hover {
    transform: scale(1.1);
-   background-color: rgba(255, 255, 255, 0.30) !important;
-   color: rgb(0, 0, 0) !important;
+   background-color: rgba(255, 255, 255, 0.30);
+   color: rgb(0, 0, 0);
  }
  
  .no-scroll {
